--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Fanannndesh</title>
+  <title>Examen</title>
 
 
 
