--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              Prueba
+              Examen
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -57,22 +57,22 @@
             <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html"> Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html"> Inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item ">
-                  <a class="nav-link" href="about.html"> About </a>
+                  <a class="nav-link" href="about.html"> Sobre Nosotros </a>
                 </li>
 
                 <li class="nav-item ">
-                  <a class="nav-link" href="admission.html"> Admission </a>
+                  <a class="nav-link" href="admission.html"> Admision </a>
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="why.html"> Why Us </a>
+                  <a class="nav-link" href="why.html"> Por que </a>
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact Us</a>
+                  <a class="nav-link" href="contact.html">Contacto </a>
                 </li>
 
               </ul>
