--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="why.html"> Por que </a>
+                  <a class="nav-link" href="why.html"> Por que contra </a>
                 </li>
 
                 <li class="nav-item">
